crates/usd-pyo3/tests/usdValidation/bin/usdchecker/testUsdChecker/bad/badUsdz.usdz
version https://git-lfs.github.com/spec/v1
oid sha256:b74d26693d2e3675cb73998e43d559bfab2cca22434f01d4ff03b8b30f749921
size 10214
